--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,10 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+remappings = [
+    '@chainlink/contracts/=node_modules/@chainlink/contracts',
+    '@chainlink/contracts-ccip/=node_modules/@chainlink/contracts-ccip',
+    '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+    '@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/'
+]
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
