--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,8 @@ remappings = [
     '@chainlink/contracts/=node_modules/@chainlink/contracts',
     '@chainlink/contracts-ccip/=node_modules/@chainlink/contracts-ccip',
     '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
-    '@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/'
+    '@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/',
+    '@layerzerolabs/lz-evm-oapp-v2/contracts/=lib/LayerZero-v2/oapp/contracts/',
+    '@layerzerolabs/lz-evm-protocol-v2/contracts/interfaces/=lib/LayerZero-v2/protocol/contracts/interfaces/'
 ]
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
