--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/minhhn2910/bridge-aggregator#readme",
   "dependencies": {
+    "@axelar-network/axelar-gmp-sdk-solidity": "^5.6.4",
     "@chainlink/contracts": "^0.8.0",
     "@chainlink/contracts-ccip": "^1.2.1",
     "@openzeppelin/contracts": "^5.0.1"
