--- a/foundry.toml
+++ b/foundry.toml
@@ -13,4 +13,14 @@ remappings = [
     'wormhole-solidity-sdk/=lib/wormhole-solidity-sdk/src/',
 ]
 
+solc_version = '0.8.23'
+# Whether or not Forge should auto-detect the solc version to use
+auto_detect_solc = true
+# Disables downloading missing solc versions
+offline = false
+# Enables or disables the optimizer
+optimizer = true
+# The number of optimizer runs
+optimizer_runs = 200
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
